# lambda-project

./: pyproject.toml  zappa_settings.json
config/: settings.py
